# crossplatform-rust-asm

./: .gitignore  Cargo.toml  README.md  build.rs
c/: simd_x86_32_unix.S  simd_x86_32_windows_gnu.S  simd_x86_64_unix.S  simd_x86_64_windows_gnu.S
src/: lib.rs  main.rs
